--- a/challenge/src/components/cardCollection/cardCollection.css
+++ b/challenge/src/components/cardCollection/cardCollection.css
@@ -51,7 +51,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: inherit;
     border: 1px solid rgb(216, 212, 247);
 }
 
