--- a/challenge/src/components/myPlayField/myPlayField.css
+++ b/challenge/src/components/myPlayField/myPlayField.css
@@ -27,6 +27,7 @@
 .card-slot {
   position: relative;
   display: flex;
+  width: 26%;
   flex-direction: column;
   align-items: center;
   transition: all 0.3s ease;
@@ -63,7 +64,9 @@
 }
 
 .card-button {
-  height: 60%;
+position: relative;
+  height: 55%;
+  width: 100%;
   aspect-ratio: 0.690;
   border: 2px solid #0ff;
   box-shadow: 0 0 15px #0ff, inset 0 0 10px rgba(0, 255, 255, 0.3);
