Внесены правки в правила игры

--- a/challenge/src/components/infoButton/infoButton.css
+++ b/challenge/src/components/infoButton/infoButton.css
@@ -107,8 +107,8 @@
 }
 
 .info-modal h2 {
-    color: #8f00ff;
-    text-shadow: 0 0 5px #8f00ff;
+    color: #ab75d4;
+    text-shadow: 0 0 5px #ab75d4;
     margin-bottom: 1.5rem;
     text-align: center;
     font-size: 1.4rem;
@@ -123,7 +123,7 @@
 }
 
 .rules-section h3 {
-    color: #8f00ff;
+    color: #b16fe4;
     margin-bottom: 0.5rem;
     font-size: 1.1rem;
 }
