--- a/challenge/src/components/scoreBar/scoreBar.css
+++ b/challenge/src/components/scoreBar/scoreBar.css
@@ -2,13 +2,13 @@
     position: absolute;
     top: 30%;
     left: 3%;
-    width: 30%;
+    width: 23%;
     height: 7%;
     background: rgba(0, 0, 0, 0.6);
     border-radius: 8px;
     /* box-shadow: 0 0 10px rgba(0, 255, 255, 0.3); */
     border: 2px solid rgb(16, 34, 34);
-  box-shadow: 0 0 10px #03e9f4;
+  box-shadow: 0 0 15px #03e9f4;
 }
 
 .score-bar-container {
@@ -16,6 +16,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 25%;
     /* border: 1px solid rgb(51, 255, 0); */
@@ -25,7 +26,7 @@
 .score-display {
     position: relative;
     left: 5%;
-    width: 30%;
+    width: 80%;
     height: 100%;
     display: flex;
     /* justify-content: center; */
@@ -58,15 +59,22 @@
 
 
 /* Стили кнопки сброса */
-.neon-reset-btn {
+
+.tooltip-container-score {
     position: relative;
-    left: 15%;
-    width: 10%;
-    border: 1px solid white;
+    /* border: 2px solid green; */
+ right: -30%;
+    width: 35%;
+    height: 100%;
+}
+
+.neon-reset-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     background: transparent;
-    /* border: none; */
-    /* padding: 8px 16px; */
     color: #f0f;
+    border-radius: 8px;
     font-family: 'Orbitron', sans-serif;
     font-size: 0.9rem;
     text-transform: uppercase;
@@ -74,10 +82,41 @@
     cursor: pointer;
     transition: all 0.3s ease;
     display: flex;
-    /* display: none; */
     align-items: center;
-    gap: 6px;
+    justify-content: center;
+
 }
+
+
+.tooltip-text-score {
+    position: absolute;
+    bottom: 80%;
+    /* над кнопкой */
+    left: 0%;
+    transform: translateX(10%);
+    background: #333;
+    color: white;
+    padding: 2%;
+    border-radius: 4px;
+    border: 1px solid white;
+    font-size: min(1.5vw, 2.2vh, 24px);
+    font-family: 'Orbitron', sans-serif;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 1000;
+}
+
+
+.tooltip-container-score:hover .tooltip-text-score {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+
+
 
 .btn-icon {
     font-size: min(1.5vw, 2.5vh, 18px);
