--- a/challenge/src/components/adMainButton/adMainButton.css
+++ b/challenge/src/components/adMainButton/adMainButton.css
@@ -1,13 +1,14 @@
 .ad_bonus_cont {
   position: absolute;
-  left: 80%;
+  left: 87%;
   bottom: 1%;
-  width: 18%;
+  width: 10%;
   height: 7%;
+  /* border: 1px solid red; */
 }
 
 .neon-ad-btn {
-  position: relative;
+  position: absolute;
   background: transparent;
   border-radius: 5px;
   width: 100%;
@@ -55,20 +56,55 @@
   transition: all 0.3s ease;
 }
 
+.tooltip-container-ad {
+    position: relative;
+    /* right: 30%; */
+    width: 100%;
+    height: 100%;
+}
+
+
+.tooltip-text-ad {
+    position: absolute;
+    bottom: 80%;
+    left: -80%;
+    transform: translateX(10%);
+    background: #333;
+    color: white;
+    padding: 2%;
+    border-radius: 4px;
+    border: 1px solid white;
+    font-size: min(1.5vw, 2.2vh, 24px);
+    font-family: 'Orbitron', sans-serif;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 1000;
+}
+
+
+.tooltip-container-ad:hover .tooltip-text-ad {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+
 .neon-ad-btn:hover:not(.disabled) {
-  color: #ff0;
-  text-shadow: 0 0 10px #ff0;
+  color: #0ff;
+  text-shadow: 0 0 10px #0ff;
 }
 
 .neon-ad-btn:hover:not(.disabled) .neon-icon {
-  filter: drop-shadow(0 0 5px #ff0);
+  filter: drop-shadow(0 0 5px #0ff);
   animation-duration: 1s;
 }
 
 .neon-ad-btn:hover:not(.disabled) .neon-glow {
   opacity: 1;
   box-shadow: 0 0 15px #0ff, inset 0 0 15px #0ff;
-  border-color: #ff0;
+  border-color: #0ff;
 }
 
 .neon-ad-btn:active:not(.disabled) {
