--- a/challenge/src/components/adMainButton/adMainButton.css
+++ b/challenge/src/components/adMainButton/adMainButton.css
@@ -58,7 +58,6 @@
 
 .tooltip-container-ad {
     position: relative;
-    /* right: 30%; */
     width: 100%;
     height: 100%;
 }
@@ -66,27 +65,26 @@
 
 .tooltip-text-ad {
     position: absolute;
-    bottom: 80%;
-    left: -120%;
-    transform: translateX(10%);
-    background: #333;
-    color: white;
-    padding: 2%;
+    background: rgba(0, 0, 0, 0.8);
+    color: #0ff;
+    padding: 5%;
     border-radius: 4px;
-    border: 1px solid white;
-    font-size: min(1.5vw, 2.2vh, 24px);
+    font-size: min(1.5vw, 2.4vh, 24px);
     font-family: 'Orbitron', sans-serif;
     white-space: nowrap;
     opacity: 0;
-    visibility: hidden;
     transition: all 0.3s ease;
+    pointer-events: none;
     z-index: 1000;
+    text-align: center;
+    border: 1px solid #0ff;
+    box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
 }
 
 
 .tooltip-container-ad:hover .tooltip-text-ad {
     opacity: 1;
-    visibility: visible;
+    transform: translate(-50%, -120%);
 }
 
 
