--- a/challenge/src/components/leaderboardButton/leaderboardButton.css
+++ b/challenge/src/components/leaderboardButton/leaderboardButton.css
@@ -1,8 +1,8 @@
 .leaderboard_btn_cont {
   position: absolute;
-  left: 60%; /* Размещаем слева от кнопки бонуса */
+  left: 3%; /* Размещаем слева от кнопки бонуса */
   bottom: 1%;
-  width: 18%;
+  width: 10%;
   height: 7%;
 }
 
@@ -81,7 +81,9 @@
 
 /* Стили для подсказки */
 .tooltip-container-leaderboard {
-  position: relative;
+  height: 100%;
+  width: 100%;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -89,26 +91,25 @@
 
 .tooltip-text-leaderboard {
   position: absolute;
-  top: -35px;
   background: rgba(0, 0, 0, 0.8);
-  color: #ffd700;
-  padding: 5px 10px;
+  color: #0ff;
+  padding: 5%;
   border-radius: 4px;
-  font-size: min(1vw, 1.5vh, 12px);
+  font-size: min(1.5vw, 2.2vh, 24px);
+  font-family: 'Orbitron', sans-serif;
   white-space: nowrap;
   opacity: 0;
-  transform: translateY(10px);
   transition: all 0.3s ease;
   pointer-events: none;
   z-index: 1000;
   text-align: center;
-  border: 1px solid #ffd700;
+  border: 1px solid #0ff;
   box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
 }
 
 .tooltip-container-leaderboard:hover .tooltip-text-leaderboard {
   opacity: 1;
-  transform: translateY(0);
+  transform: translateY(-120%);
 }
 
 @keyframes pulse {
