--- a/challenge/src/components/scoreBar/scoreBar.css
+++ b/challenge/src/components/scoreBar/scoreBar.css
@@ -61,9 +61,9 @@
 /* Стили кнопки сброса */
 
 .tooltip-container-score {
-    position: relative;
+    position: absolute;
     right: -30%;
-    width: 35%;
+    width: 25%;
     height: 100%;
 }
 
@@ -86,29 +86,28 @@
 }
 
 
+
 .tooltip-text-score {
     position: absolute;
-    bottom: 80%;
-    left: 0%;
-    transform: translateX(10%);
-    background: #333;
-    color: white;
-    padding: 2%;
+    background: rgba(0, 0, 0, 0.8);
+    color: #0ff;
+    padding: 5%;
     border-radius: 4px;
-    border: 1px solid white;
     font-size: min(1.5vw, 2.2vh, 24px);
     font-family: 'Orbitron', sans-serif;
     white-space: nowrap;
     opacity: 0;
-    visibility: hidden;
     transition: all 0.3s ease;
+    pointer-events: none;
     z-index: 1000;
+    text-align: center;
+    border: 1px solid #0ff;
+    box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
 }
-
 
 .tooltip-container-score:hover .tooltip-text-score {
     opacity: 1;
-    visibility: visible;
+    transform: translate(-35%, -120%);
 }
 
 
